; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/optimizer/path/extr_pathkeys.c_pathkeys_contained_in.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/optimizer/path/extr_pathkeys.c_pathkeys_contained_in.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pathkeys_contained_in(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = load i32*, i32** %5, align 8
  %8 = call i32 @compare_pathkeys(i32* %6, i32* %7)
  switch i32 %8, label %10 [
    i32 128, label %9
    i32 129, label %9
  ]

9:                                                ; preds = %2, %2
  store i32 1, i32* %3, align 4
  br label %12

10:                                               ; preds = %2
  br label %11

11:                                               ; preds = %10
  store i32 0, i32* %3, align 4
  br label %12

12:                                               ; preds = %11, %9
  %13 = load i32, i32* %3, align 4
  ret i32 %13
}

declare dso_local i32 @compare_pathkeys(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
